--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ajv": "^6.11.0",
     "express": "^4.17.1",
+    "firebase": "^7.9.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0"
   },
