--- a/functions/package.json
+++ b/functions/package.json
@@ -18,10 +18,12 @@
     "express": "^4.17.1",
     "firebase": "^7.9.1",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "mongodb": "^3.5.5"
   },
   "devDependencies": {
     "@google-cloud/functions-framework": "^1.3.2",
+    "@types/mongodb": "^3.5.2",
     "firebase-functions-test": "^0.1.6",
     "tslint": "^5.12.0",
     "typescript": "^3.7.5"
